<resources>
    <string name="app_name">BKLibrary</string>
    <string name="api_url">https://tranquil-springs-55255.herokuapp.com</string>
    <string name="error_login_message">Có lỗi xảy ra, hãy chắc chắn bạn nhập đúng tài khoản và mật khẩu</string>
    <string name="login_message">Đang đăng nhập</string>
    <string name="register_username_info">Tên đăng nhập:</string>
    <string name="register_username_hint">Username</string>
    <string name="register_email_info">Email:</string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_info">Password:</string>
    <string name="register_password_hint">Password</string>
    <string name="register_fullname_info">Họ và tên:</string>
    <string name="register_fullname_hint">Họ và tên:</string>
    <string name="register_phone_info">Số điện thoại:</string>
    <string name="register_phone_hint">Số điện thoại:</string>
    <string name="register_address_info">Địa chỉ:</string>
    <string name="register_address_hint">Địa chỉ</string>
    <string name="register_btn">Đăng ký</string>
    <string name="register_txt_login">Bạn đã là thành viên?</string>
    <string name="register_button_login">Đăng nhập</string>
    <string name="register_information">ĐĂNG KÝ TÀI KHOẢN</string>
    <string name="signup_message">Đang đăng ký</string>
    <string name="connection_error">Lỗi kết nối</string>
    <string name="update_message">Đang cập nhật</string>
    <string name="waiting_message">Vui lòng chờ</string>
    <string name="sample_book_info">Introduction to Algorithms is a book by Thomas H. Cormen, Charles E. Leiserson,
        Ronald L. Rivest, and Clifford Stein. The first edition of the book was widely used as the textbook for
        algorithms courses at many universities[1] and is commonly cited as a reference for algorithms in published
        papers, with over 10000 citations documented on CiteSeerX.[2] The book sold half a
        million copies during its first 20 years.[3] Its fame has led to the common use of the abbreviation
        "CLRS" (Cormen, Leiserson, Rivest, Stein), or, in the first edition, "CLR" (Cormen, Leiserson, Rivest).[4]</string>
    <string name="loading_book_info">Đang tải thông tin sách</string>
    <string name="borrowed_success">Mượn sách thành công</string>
    <string name="borrowed_failure">Không thể mượn sách</string>
    <string name="sending_request_borrow">Đang gửi yêu cầu...</string>
    <string name="not_enough_book">Không còn sách loại này!</string>
    <string name="loading_history_transaction">Đang tải lịch sử mượn sách!</string>
    <string-array name="Query_suggestion">
        <item> Database</item>
        <item> Cấu trúc rời r</item>
        <item> Giải tích</item>
        <item> Đồ họa máy tính</item>
    </string-array>
    <string name="notifications_admin_channel_name">Global channel</string>
    <string name="notifications_admin_channel_description">Notifications sent from the app admin</string>
    <string name="checking_message">Đang kiểm tra..</string>
</resources>
