<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/bklogo"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/info" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="5dp"
            android:text="@string/register_information"
            android:textColor="#000000"
            android:textSize="20dp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_username_info"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_username_hint"
            android:inputType="textEmailAddress"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_email_info"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText

            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_email_hint"
            android:inputType="textEmailAddress"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_password_info"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText

            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_fullname_info"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText

            android:id="@+id/edtHoten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_fullname_hint"
            android:inputType="text"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_phone_info"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText

            android:id="@+id/edtSodienthoai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_phone_hint"
            android:inputType="phone"


            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_address_info"
            android:textColor="#000000"
            android:textSize="15sp" />

        <EditText

            android:id="@+id/edtDiachi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/register_address_hint"
            android:inputType="text"

            />

        <Button
            android:id="@+id/btnDangky"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/custombutton"
            android:text="@string/register_btn"
            android:textAllCaps="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_txt_login"

                />

            <TextView
                android:id="@+id/twDangnhap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_button_login"
                android:textColor="#000080"
                android:textStyle="italic" />

        </LinearLayout>

    </LinearLayout>



</LinearLayout>

